schema/testdata/validation_operation_inputs_labels/schema.keel
enum Fruit {
    Apple
    Orange
}

message Message1 {
    field1 Text
}

model Person {
    fields {
        favFruit Fruit
    }

    actions {
        // ok, because ID is a built in type
        get getPerson1(personId: ID) {
            @where(person.id == personId)
        }
        // invalid, because id is a field
        get getPerson2(personId: id) {
            @where(person.id == personId)
        }
        // ok, because thisFruit is an enum
        list listPeopleByFruit(thisFruit: Fruit) {
            @where(person.favFruit == thisFruit)
        }
    }

    actions {
        // invalid because you're not allowed to name Message inputs.
        read doSomethingCustom(foo: Message1) returns (Message1)
    }
}
